# Anima

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  package.json  pnpm-lock.yaml
adapters/: base.py
adapters/miot/: adapter.py  config.yaml  xiaomi_cloud.py
anima/: .gitignore  docker-compose.yml  pyproject.toml
anima/core/: cli.py  config.py  mqtt.py
anima/core/brain/: engine.py
anima/core/memory/: store.py
anima/skills/air_conditioner/: actions.py
anima/skills/coordinator/: knowledge.md
anima/skills/humidifier/: skill.yaml
anima/skills/humidifier/prompts/: decide.md
anima/skills/light/: knowledge.md
anima/skills/light/prompts/: decide.md
anima/tests/: test_integration.py
anima/tests/core/: test_brain.py  test_eventbus.py  test_memory.py
anima/tests/skills/: test_skill_loader.py
core/: config.py  discovery.py  main.py  models.py  settings_store.py
core/api/: routes.py
core/brain/: engine.py  skill_loader.py
core/events/: bus.py
core/rules/: engine.py
core/scheduler/: scheduler.py
dashboard/: package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ChatBar.tsx  (+6 more)
docs/plans/: 2026-03-17-anima-design.md  2026-03-17-anima-design.zh-CN.md  2026-03-17-anima-v01-impl.md
skills/air_conditioner/: knowledge.md  skill.yaml
skills/coordinator/: skill.yaml
skills/humidifier/: actions.py  knowledge.md
skills/light/: actions.py  skill.yaml
tests/adapters/: test_miot.py
tests/core/: test_discovery.py  test_models.py  test_mqtt.py  test_rules.py  test_scheduler.py
(+6 files in other folders)
